--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/safetyhook"]
 	path = vendor/safetyhook
-	url = https://github.com/cursey/safetyhook
+	url = https://github.com/alliedmodders/safetyhook
